--- a/package.json
+++ b/package.json
@@ -1,55 +1,62 @@
 {
-  "name": "react-boilerplate",
+  "name": "phoenix-airlines",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest --no-color 2>output.txt",
-    "start": "webpack-dev-server --mode development --watch --open --hot",
-    "build": "webpack --mode production"
-  },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "css-loader": "^4.3.0",
-    "cypress": "^9.5.0",
-    "jest-junit": "^11.1.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.3.4",
-    "style-loader": "^1.2.1",
-    "webpack-cli": "^3.3.12"
+  "main": "src/index.js",
+  "engines": {
+    "node": ">=18.14.0",
+    "npm": ">=8.0.0"
   },
-  "jest": {
-    "moduleNameMapper": {
-      "\\.(css|less|sass|scss)$": "<rootDir>/config/CSSStub.js"
-    },
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ],
-    "reporters": [
-      "default",
-      "jest-junit"
-    ]
+  "dependencies": {
+    "@material-ui/core": "4.11.4",
+    "@material-ui/icons": "4.11.2",
+    "@material-ui/lab": "4.0.0-alpha.58",
+    "@material-ui/styles": "4.11.4",
+    "@material-ui/utils": "4.11.2",
+    "@ryancavanaugh/redux-saga": "0.9.12-alpha",
+    "@wojtekmaj/enzyme-adapter-react-17": "0.8.0",
+    "enzyme": "3.11.0",
+    "jest-enzyme": "7.1.2",
+    "jest-styled-components": "7.0.4",
+    "props-type": "1.0.1",
+    "react": "17.0.2",
+    "react-bootstrap": "1.6.1",
+    "react-dom": "17.0.2",
+    "react-redux": "7.2.4",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "4.0.3",
+    "redux": "4.1.0",
+    "redux-saga": "0.16.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@testing-library/react": "^11.0.4",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.1.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
-    "enzyme-to-json": "^3.5.0",
-    "html-webpack-plugin": "^4.5.0",
-    "jest": "^26.4.2",
-    "react-test-renderer": "^16.13.1",
-    "webpack": "^4.44.2",
-    "webpack-dev-server": "^3.11.0",
-    "xml-js": "^1.6.11"
-  }
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "@babel/runtime": "7.13.8",
+    "@testing-library/dom": "8.20.1",
+    "@testing-library/jest-dom": "5.17.0",
+    "@testing-library/react": "12.1.5",
+    "cypress": "^10.11.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jsesc": "^3.1.0",
+    "typescript": "4.1.3"
+  },
+  "resolutions": {
+    "babel-jest": "26.6.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
